k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dvdrental
  labels:
    name: dvdrental
    environment: production
